# HAGI

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  research_proposal.md
.github/workflows/: ci.yml
benchmarks/: README.md
configs/: baseline.yaml  gdr.yaml  overfit.yaml  rtx3070.yaml  rtx3070_fast.yaml  rtx3070_fast_10m.yaml  rtx3070_final.yaml  rtx3070_full.yaml
crates/clifford-core/: Cargo.toml
crates/clifford-core/src/: algebra.rs  invariants.rs  lib.rs  multivector.rs  product_table.rs  rotor.rs
crates/clifford-core/tests/: basic_contracts.rs  multivector.rs  product_table.rs  rotor.rs
crates/config/: Cargo.toml
crates/config/src/: demo.rs  enums.rs  hdim.rs  hrm.rs  lib.rs  model.rs
crates/config/tests/: hrm_config.rs  model_config.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: algebra.rs  cycles.rs  dtype.rs  ids.rs  layout.rs  lib.rs  shape.rs  tensor_layout.rs  tensor_spec.rs
crates/core-types/tests/: dtype_tag.rs  tensor_layout.rs
crates/cuda-kernels/: Cargo.toml  README.md  build.rs
crates/cuda-kernels/kernels/: .clangd  fused_rotor_hrm_msa.cu  geometric_product.cu  hrm_update.cu  msa_route_score.cu  rotor_sandwich.cu  sparse_attention.cu
crates/cuda-kernels/src/: attention.rs  clifford.rs  cuda_impl.rs  dispatch.rs  fused.rs  lib.rs
crates/cuda-kernels/tests/: basic_contracts.rs  integration.rs  parity.rs
crates/data/: Cargo.toml
crates/data/src/: batch.rs  lib.rs  multipack.rs  prefix_lm.rs  toy_dataset.rs
crates/data/tests/: batch.rs  hrm_boundary.rs  multipack.rs  packed_batch_tensor_contract.rs  prefix_lm.rs  public_api.rs
crates/ffi-compat/: Cargo.toml
crates/ffi-compat/src/: lib.rs
crates/hagi-eval/: Cargo.toml
crates/hagi-eval/src/: bench.rs  golden.rs  lib.rs  main.rs  report.rs
crates/hagi-eval/tests/: bench_component.rs  report.rs
crates/hagi-train/: Cargo.toml
crates/hagi-train/src/: checkpoint.rs  lib.rs  main.rs  nars_training_wrapper.rs  optimizer.rs  train_loop.rs
crates/hagi-train/tests/: e2e_training.rs  training.rs
crates/hdim-model/: Cargo.toml
crates/hdim-model/src/: extractor.rs  fusion.rs  lib.rs  projection.rs  transfer.rs
crates/hdim-model/tests/: basic_contracts.rs  extractor.rs  free_functions.rs  fusion.rs  hdim_forward.rs  integration.rs  projection.rs  transfer.rs
crates/hrm-model/: Cargo.toml
crates/hrm-model/src/: attention.rs  hrm.rs  lib.rs  lm_head.rs  mask.rs  mlp.rs  norm.rs  recurrence.rs  rope.rs  transformer.rs
crates/hrm-model/tests/: architecture_compliant.rs  m2_contract.rs  m2_tests.rs
crates/losses/: Cargo.toml
crates/losses/src/: auxiliary.rs  cross_entropy.rs  isomorphic.rs  lib.rs  total.rs
crates/losses/tests/: total.rs
crates/msa-adapter/: Cargo.toml
crates/msa-adapter/src/: attention_bridge.rs  fetch.rs  interleave.rs  kv_cache.rs  lib.rs  registry.rs  rope.rs  route.rs  slot.rs  sparse_attention.rs
crates/msa-adapter/tests/: attention_bridge.rs  fetch.rs  integration.rs  interleave.rs  kv_cache.rs  public_api.rs  rope.rs  route.rs  sparse_attention_pages.rs
crates/nars-core/: Cargo.toml
crates/nars-core/src/: bag.rs  budget.rs  concept.rs  lib.rs  sentence.rs  task.rs  term.rs  truth.rs
crates/nars-hdim/: Cargo.toml
crates/nars-hdim/src/: lib.rs  reasoner.rs  registry_ext.rs
crates/nars-hdim/tests/: reasoned_transfer.rs
crates/nars-hrm/: Cargo.toml
crates/nars-hrm/src/: controller.rs  feedback.rs  lib.rs  policy.rs
crates/nars-hrm/tests/: controller_readiness.rs
crates/nars-msa/: Cargo.toml
crates/nars-msa/src/: lib.rs  policy.rs  reasoner.rs
crates/nars-msa/tests/: reasoner_behavior.rs
crates/tensor-runtime/: Cargo.toml
crates/tensor-runtime/src/: backend.rs  lib.rs  tensor.rs
crates/tensor-runtime/tests/: backend.rs  basic_contracts.rs  tensor.rs
data/fineweb_10M/: metadata.txt
data/fineweb_1M/: metadata.txt
docs/: ARCHITECTURE.md  MILESTONES.md  RESEARCH.md  TRAINING.md  WSL2-SETUP.md  architecture_diagrams.md  hagi-lean-architecture.md  implementation_plan.md  realizability_verification.md
formalization/: HAGI.lean  TestRunner.lean  lake-manifest.json  lakefile.lean
formalization/HAGI/: CoreTypes.lean  HDIM.lean  HRM.lean  Invariants.lean  MSA.lean  NARS.lean  Numerics.lean  TensorRuntime.lean
prototype/: README.md  __init__.py
prototype/data/: __init__.py  dataset.py  tokenize.py  tokenizer.py  toy.py
prototype/evaluation/: evaluate.py  lm_eval_wrapper.py
prototype/model/: __init__.py  clifford.py  gdr.py  hagi.py  transformer.py
prototype/tests/: test_clifford.py  test_configs.py  test_model.py  test_overfit.py
prototype/training/: config.py  loop.py  optim.py  train.py
scripts/: chat_rtx3070.py  download_data.py  lean_verify.py  param_count.py  toy_chat.py  train_rtx3070.py  train_rtx3070_fast.py  train_rtx3070_full.py
setup/: ubuntu-setup.sh  wsl2-install.ps1
src/hagi/: __init__.py  losses.py
src/hagi/core/: __init__.py  algebra.py  types.py
src/hagi/data/: __init__.py  batch.py  dataloader.py  memmap.py  prefix_lm.py  tokenizer.py
src/hagi/eval/: __init__.py  cli.py  golden.py  lm_eval_adapter.py  report.py
src/hagi/hdim/: __init__.py  reasoner.py
src/hagi/hrm/: __init__.py  control.py
src/hagi/inference/: __init__.py  chat.py  cli.py  generate.py
src/hagi/lean/: __init__.py  bridge.py
src/hagi/model/: __init__.py  hagi.py  hdim_full.py  hrm_full.py  transformer.py
src/hagi/msa/: __init__.py  adapter.py
tests/: test_checkpoint.py  test_clifford.py  test_composite_loss.py  test_config.py  test_core_types.py  test_data_pipeline.py  test_dataloader.py  test_hdim_full.py  test_hdim_reasoner.py  test_hrm.py  test_hrm_control.py  test_inference.py  test_lean_bridge.py  test_losses.py  test_model_variants.py  test_msa_adapter.py  test_nars_core.py  test_prefix_lm.py  test_rtx3070_config.py  test_train_overfit.py
(+17 files in other folders)
