[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hagi"
version = "0.2.0"
description = "Hypercomplex Artificial General Intelligence — grade-decomposed Clifford recurrence for intelligence-dense small models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["prototype"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["prototype/tests"]
pythonpath = ["."]
addopts = "-q"
