[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hagi"
version = "0.1.0"
dependencies = [
    "numpy",
    "torch",
    "pyyaml",
    "typer",
    "pexpect",
    "pytest",
]

[project.optional-dependencies]
lm-eval = ["lm-eval"]

[project.scripts]
hagi-train = "hagi.train.cli:main"
hagi-eval = "hagi.eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
