[package]
name = "hdim-model"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
core-types = { workspace = true }
tensor-runtime = { workspace = true }
clifford-core = { workspace = true }
config = { workspace = true }
hrm-model = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
