[package]
name = "hrm-model"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
core-types = { workspace = true }
tensor-runtime = { workspace = true }
config = { workspace = true }
data = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
core-types = { workspace = true }
tensor-runtime = { workspace = true }
config = { workspace = true }
