[package]
name = "nars-hdim"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nars-core = { path = "../nars-core" }
hdim-model = { workspace = true }
config = { workspace = true }
core-types = { workspace = true }
clifford-core = { workspace = true }
tensor-runtime = { workspace = true }
thiserror = { workspace = true }
