[package]
name = "nars-hrm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
nars-core = { workspace = true }
hrm-model = { workspace = true }
config = { workspace = true }
data = { workspace = true }
tensor-runtime = { workspace = true }
thiserror = { workspace = true }
core-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
losses = { workspace = true }
